--- a/index.html
+++ b/index.html
@@ -19,6 +19,103 @@
 </head>
 
 <body>
+ <!-- Modal-Login -->
+    <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title text-center" id="myModalLabel">Giriş Yap</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-6">
+
+                            <div class="form-group">
+                                <input type="text" class="form-control login-field" value="" placeholder="E-posta adresi giriniz" id="login-name" required="required" />
+                                <label class="login-field-icon fui-mail" for="login-name"></label>
+                                <input type="password" class="form-control login-field" value="" placeholder="Şifre" id="login-pass" />
+                                <label class="login-field-icon fui-lock" for="login-pass"></label>
+                                <button type="submit" class="btn btn-primary btn-lg btn-block" href="#">Giriş yap </button>
+
+                            </div>
+                            <div class="alert alert-danger fui-alert-circle"> E-postanız veya Şifreniz hatalı.</div>
+
+
+
+                        </div>
+                        <div class="col-md-6"><a class="btn btn-block btn-social btn-facebook">
+    <span class="fa fa-facebook-f"></span> Facebook ile giriş yap
+                                                    </a>
+                            <a class="btn btn-block btn-social btn-google">
+    <span class="fa fa-google"></span> Google ile giriş yap
+                                                    </a>
+                                                    <hr>
+                                                    <div class="form-group">
+                                                         <button type="submit" class="btn btn-primary btn-lg btn-block" data-toggle="modal"  data-dismiss="modal" data-target="#register">Kayıt Ol </button>
+                                                    </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Kapat</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+     <!-- Modal-Register -->
+    <div class="modal fade" id="register" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title text-center" id="myModalLabel">Kayıt Ol</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-6">
+
+                            <div class="form-group">
+                               <input type="text" class="form-control login-field" value="" placeholder="Adınızı giriniz" id="login-name" />
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                        <input type="text" class="form-control login-field" value="" placeholder="Soyadınızı giriniz" id="login-name" />
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                               
+                                <input type="text" class="form-control login-field" value="" placeholder="E-posta adresi giriniz" id="login-name" />
+                            <label class="login-field-icon fui-mail" for="login-name"></label>
+                                <input type="password" class="form-control login-field" value="" placeholder="Şifre" id="login-pass" />
+                            <label class="login-field-icon fui-lock" for="login-pass"></label>
+                                <input type="password" class="form-control login-field" value="" placeholder="Tekrar Şifre" id="login-pass" />
+                            <label class="login-field-icon fui-lock" for="login-pass"></label>
+                                <button type="submit" class="btn btn-primary btn-lg btn-block" href="#">Kayıt Ol </button>
+
+                            </div>
+                            <div class="alert alert-danger fui-alert-circle">Şifreler Eşleşmiyor / Geçersiz Eposta.</div>
+
+
+
+                        </div>
+                        <div class="col-md-6"><a class="btn btn-block btn-social btn-facebook">
+    <span class="fa fa-facebook-f"></span> Facebook ile giriş yap
+                                                    </a>
+                            <a class="btn btn-block btn-social btn-google">
+    <span class="fa fa-google"></span> Google ile giriş yap
+                                                    </a>
+                                                    <hr>
+                                                    <div class="form-group">
+                                                         <button type="submit" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-dismiss="modal" data-target="#login">Giriş Yap</button>
+                                                    </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Kapat</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <nav style=" margin-bottom:5px;" class="navbar navbar-default" role="navigation">
@@ -63,47 +160,7 @@
         </div>
         <!-- /.navbar-collapse -->
     </nav>
-    <!-- Modal -->
-    <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title text-center" id="myModalLabel">Giriş Yap</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-6">
-
-                            <div class="form-group">
-                                <input type="text" class="form-control login-field" value="" placeholder="E-posta adresi giriniz" id="login-name" required="required" />
-                                <label class="login-field-icon fui-mail" for="login-name"></label>
-                                <input type="password" class="form-control login-field" value="" placeholder="Şifre" id="login-pass" />
-                                <label class="login-field-icon fui-lock" for="login-pass"></label>
-                                <button type="submit" class="btn btn-primary btn-lg btn-block" href="#">Giriş yap </button>
-
-                            </div>
-                            <div class="alert alert-danger fui-alert-circle"> E-postanız veya Şifreniz hatalı.</div>
-
-
-
-                        </div>
-                        <div class="col-md-6"><a class="btn btn-block btn-social btn-facebook">
-    <span class="fa fa-facebook-f"></span> Facebook ile giriş yap
-                                                    </a>
-                            <a class="btn btn-block btn-social btn-google">
-    <span class="fa fa-google"></span> Google ile giriş yap
-                                                    </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Kapat</button>
-
-                </div>
-            </div>
-        </div>
-    </div>
+   
     <div class="container-full">
         <div style="padding:0;" class="row">
             <div style="padding-right:0;" class="col-md-2 left-navbar">
