Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
                         <div style="float: left;" class="pin">
                             <img src="Assets/images/phone.jpg" alt="Card image cap" />
-                            <h3 class="text-align-center">Phone</h3>
+                            <h3 class="text-align-center">Phone1</h3>
                             <p class="text-align-center">
                                 İstanbul
                             </p>
