--- a/project/index.html
+++ b/project/index.html
@@ -187,7 +187,7 @@
                 <div  class="list-group">
                     <a href="#" class="list-group-item active">Kategoriler</a>
                     
-                    <a data-complete="showTick-1" class="list-group-item list-group-item-action hand">Elektronik <img class="tick"  src="images/tick.png" width="21" alt="tick"/> </a>
+                    <a data-complete="showTick-1" class="list-group-item list-group-item-action hand">Elektronik <img class="tick pull-right img-responsive"  src="images/tick.png" width="21" alt="tick"/> </a>
                     <a data-complete="showTick-2" class="list-group-item list-group-item-action hand">Yedek Parça <img  class="tick"  src="images/tick.png" width="21" alt="tick"></a>
                     <a data-complete="showTick-3" class="list-group-item list-group-item-action hand">Spor <img class="tick" src="images/tick.png" width="21" alt="tick"></a>
                     <a data-complete="showTick-4" class="list-group-item list-group-item-action hand">Eğlence <img class="tick" src="images/tick.png" width="21" alt="tick"></a>
